--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="static/font-awesome/css/font-awesome.min.css" type='text/css'>
+    <link rel="stylesheet" href="static/font-awesome/css/fontawesome-all.min.css" type='text/css'>
 
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="static/css/materialize.min.css"  media="screen,projection"/>
@@ -23,151 +23,154 @@
 
     <style>
 
-        body{
-          
-          margin:5px 60px 5px 60px;
-        }
+      body{
 
-        .fa{
+        margin-top: 10px;
+      }
 
-           color:#880e4f;
-        }
+      .left-links{
+
+        margin-left:20%;
+      }
+   
 
     </style>
-
-    
 
   </head>
 
   <body>
 
-    <div class='container'>
+    <div class="container">
 
-    <header>
+      <div class="divider grey lighten-1"></div>
 
-    <nav class='teal darken-3'>
-      <div class="nav-wrapper">
-        <!--<a href="#" class='brand-logo'>JK</a>-->
-        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <div class="row">
 
-        <ul id='nav-mobile' class='right hide-on-med-and-down'>
-          <li class='active'><a href='/'>Home</a></li>
-          <li><a href='/career'>CV</a></li>
-          <li><a href='/photos'>Gallery</a></li>
-          <li><a href='/blog'>Blog</a></li>
-          <li><a href='/contact'>Contact</a></li>
-        </ul>
+        <div class="col s12 m7">
 
-        <ul class='side-nav teal darken-3' id='mobile-demo'>
-          <li class='active'><a href='/'>Home</a></li>
-          <li><a href='/career'>CV</a></li>
-          <li><a href='/photos'>Gallery</a></li>
-          <li><a href='/blog'>Blog</a></li>
-          <li><a href='/contact'>Contact</a></li>
-        </ul>
+            <div class="section">
 
-      </div>
-    </nav>
-
-    </header>
-
-    <div class='divider'> </div> <!-- fix one pixel space between header and main content -->
-
-    <main>
-
-      
-
-       <div class='row'>
-
-          <div class='col s12 m7'>
-
-            <div class='section'>
-
-            <img src='static/img/julio.jpg' class='responsive-img ' alt='Julius Image'/>
+                <img src="static/img/julio.jpg" class="responsive-img" alt="Julius Image"/> 
 
             </div>
 
-            <div class='section'>
+            <div class="section left-links">
 
-            
-            <p class='center'>
-            
-             
+              <a class="btn-floating deep-orange" href="/career">
+                <i class="fas fa-wrench fa-2x hoverable" style="color:white;"></i>
+               </a> &nbsp;&nbsp;&nbsp;&nbsp;
+  
+               <a class="btn-floating deep-orange" href="/photos">
+                 <i class="fas fa-camera fa-2x" style="color:white;"></i>
+               </a>&nbsp;&nbsp;&nbsp;&nbsp;
+  
+               <a class="btn-floating deep-orange" href="/books">
+                 <i class="fas fa-book fa-2x" style="color:white;"></i>
+               </a> &nbsp;&nbsp;&nbsp;&nbsp;
 
-             <a href='http://www.facebook.com/julius.kimuli'>
-              <span class="fa fa-facebook fa-4x" aria='hidden'></span>
+               <a class="btn-floating deep-orange" href="/contact">
+                <i class="fas fa-envelope fa-2x" style="color:white;"></i>
+              </a> &nbsp;&nbsp;&nbsp;&nbsp;
+
+            </div>
+            
+
+        </div>
+
+        <div class="col s12 m5">
+
+            <div class="section">
+
+              <h5 class="grey-text text-darken-4"> Hello,</h5>
+
+              <h6 class="grey-text text-darken-4"> I'm Julius Kimuli</h6>
+              <p class="grey-text text-darken-1">Telecom Engineer and Software Developer from</p>
+
+              <p> Kampala - Uganda</p>
+
+            </div>
+
+            <div class="divider grey lighten-1"></div>
+
+            <div class="section">
+
+                <h6 class="grey-text text-darken-4"> My Favorite Things:</h6>
+
+                <div class="row">
+
+                  <div class="col s6">
+
+                      <ul>
+                          <li class="grey-text text-darken-1"><i class="fas fa-desktop" style="color:#FF5722;"></i> &nbsp;&nbsp;<span class="grey-text text-darken-1">Computers and Technology</span></li>
+                          <li><i class="fas fa-book" style="color:#FF5722;"></i> &nbsp;&nbsp;<span class="grey-text text-darken-1">Reading</span></li>
+                          <li><i class="fas fa-baseball-ball" style="color:#FF5722;"></i> &nbsp;&nbsp;<span class="grey-text text-darken-1">Cricket</span></li>
+      
+                      </ul>
+
+                  </div>
+
+                  <div class="col s6">
+
+                      <ul>
+                          <li><i class="fas fa-car" style="color:#FF5722;"></i> &nbsp;&nbsp;<span class="grey-text text-darken-1">Motorsport</span></li>
+                          <li><i class="fas fa-music" style="color:#FF5722;"></i> &nbsp;&nbsp;<span class="grey-text text-darken-1">Music</span></li>
+                          <!--<li><i class="fas fa-aeroplane" style="color:#FF5722;"></i>&nbsp;&nbsp;<span class="grey-text text-darken-1">Travel</span></li>-->
+                      </ul>
+
+                  </div>
+
+                </div>
+                           
+
+            </div>
+  
+            
+            
+            
+
+        </div>
+
+
+      </div>
+      
+      <div class="divider grey lighten-1"> </div>
+
+      <div class="row">
+
+        <div class="col s12">
+
+            <div class="section green center-align">
+
+            <a href="http://www.facebook.com/julius.kimuli">
+              <i class="fab fa-facebook fa-2x" style="color:white;"></i>
              </a> &nbsp;&nbsp;&nbsp;&nbsp;
 
              <a href="http://ug.linkedin.com/in/jkimuli">
-               <span class="fa fa-linkedin fa-4x" aria='hidden'></span>
+               <i class="fab fa-linkedin fa-2x" style="color:whitesmoke;"></i>
+             </a>&nbsp;&nbsp;&nbsp;&nbsp;
+
+             <a href="https://twitter.com/JuliusKimuli">
+               <i class="fab fa-twitter fa-2x" style="color:whitesmoke;"></i>
              </a> &nbsp;&nbsp;&nbsp;&nbsp;
 
-             <a href='https://twitter.com/JuliusKimuli'>
-               <span class="fa fa-twitter fa-4x" aria='hidden'></span>
+             <a href="https://github.com/jkimuli">
+               <i class="fab fa-github fa-2x" style="color:whitesmoke;"></i>
              </a> &nbsp;&nbsp;&nbsp;&nbsp;
 
-             <a href='https://github.com/jkimuli'>
-               <span class="fa fa-github fa-4x" aria='hidden'></span>
-             </a> &nbsp;&nbsp;&nbsp;&nbsp;
+             <a href="https://plus.google.com/u/0/117063591173689453940">
+               <i class="fab fa-google-plus fa-2x" style="color:whitesmoke;"></i>
+            </a>
 
-             <a href='https://plus.google.com/u/0/117063591173689453940'>
-               <span class="fa fa-google-plus fa-4x" aria='hidden'></span>
-            </a></p>
+           </div>
 
-            </div>
+        </div>
 
-          </div>
-
-          <div class='col s12 m5'>
-
-            <div class='section'>
-
-               <p> Hi!, welcome to my personal website. I am Julius Kimuli from Kampala Uganda
-                  - a telecommunications engineer, web developer and technology enthusiast. </p>
-
-               <p> I am currently working in telecoms with Nokia Networks Uganda </p>
-
-               <p> 
-                  Some stuff that i enjoy:
-               </p>
-                
-                  <ul class='browser-default'>
-                    <li>Everything computers and tech
-                    <li>An avid book reader
-                    <li>Cricket and Motorsport
-                    <li>Travel 
-                  </ul>
-              
-            </div>
-
-          </div>
-
-
-       </div>
-      
-       
-    
-    </main>
-
-    <div class='divider'> </div> <!-- fix one pixel space between footer and main content -->
-
-
-    <footer class='page-footer teal darken-3'>
-      
-      <div class='footer-copyright'>
-         <div class='container'>
- 
-           <p class='center'> Copyright &nbsp; &copy; &nbsp;<span id="year"></span> - Julius Kimuli </p>
-
-         </div>
 
       </div>
 
-    </footer>
-
-    </div> <!-- end container -->
-
-
+    </div>
+            
+        
     <!--Import jQuery before materialize.js-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -183,11 +186,10 @@
         $(".button-collapse").sideNav();
 
       });
-
-
       
     </script>
   
   </body>
+  
 
 </html>
