--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -12,7 +12,7 @@
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="static/font-awesome/css/font-awesome.min.css" type='text/css'>
+    <link rel="stylesheet" href="static/font-awesome/css/fontawesome-all.min.css" type='text/css'>
 
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="static/css/materialize.min.css"  media="screen,projection"/>
@@ -21,16 +21,7 @@
     <title>Julius Kimuli - Home Page</title>
 
     <style>
-
-        body{
-          
-          margin:5px 60px 5px 60px;
-        }
-
-        .fa{
-
-           color:#e57373;
-        }
+    
 
         .contact-form{
 
@@ -39,36 +30,36 @@
         }
 
     </style>
-
     
 
   </head>
 
-  <body>
+  <body class="container">
 
-    <div class='container'>
-
+    
     <header>
 
-    <nav class='teal darken-3'>
+    <nav class="green">
       <div class="nav-wrapper">
         <!--<a href="#" class='brand-logo'>JK</a>-->
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 
-        <ul id='nav-mobile' class='right hide-on-med-and-down'>
-          <li><a href='/'>Home</a></li>
-          <li><a href='/career'>CV</a></li>
-          <li><a href='/photos'>Gallery</a></li>
-          <li><a href='/blog'>Blog</a></li>
-          <li class='active'><a href='/contact'>Contact</a></li>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="/">Home</a></li>
+          <li><a href="/career">CV</a></li>
+          <li><a href="photos">Gallery</a></li>
+          <li><a href="/books">Blog</a></li>
+          <li class="active"><a href="/contact">Contact</a></li>
         </ul>
 
-        <ul class='side-nav teal darken-3' id='mobile-demo'>
-          <li><a href='/'>Home</a></li>
-          <li><a href='/career'>CV</a></li>
-          <li><a href='/photos'>Gallery</a></li>
-          <li><a href='/blog'>Blog</a></li>
-          <li class='active'><a href='/contact'>Contact</a></li>
+        <ul class="side-nav" id="mobile-demo">
+
+            <li><a href="/">Home</a></li>
+            <li><a href="/career">CV</a></li>
+            <li><a href="photos">Gallery</a></li>
+            <li><a href="/books">Blog</a></li>
+            <li class="active"><a href="/contact">Contact</a></li>
+          
         </ul>
 
       </div>
@@ -76,15 +67,15 @@
 
     </header>
 
-    <div class='divider'> </div> <!-- fix one pixel space between header and main content -->
+    <div class="divider"> </div> <!-- fix one pixel space between header and main content -->
 
     <main>
 
           <div class="row">
 
-            <div class="col sm12 m12">
+            <div class="col sm12 m6">
               
-              <div class='section'>
+              <div class="section">
                                     
                   <form id="contact-form" method="post" action="">
 
@@ -123,25 +114,22 @@
     
     </main>
 
-    <div class='divider'> </div> <!-- fix one pixel space between footer and main content -->
+    <div class="divider"> </div> <!-- fix one pixel space between footer and main content -->
 
 
-    <footer class='page-footer teal darken-3'>
+    <footer>
       
-      <div class='footer-copyright'>
-         <div class='container'>
+      <div class="section center-align">
+         
  
-           <p class='center'> Copyright &nbsp; &copy; &nbsp;<span id="year"></span> - Julius Kimuli </p>
-
-         </div>
+           <h6 class="center grey-text text-darken-4"> Copyright &nbsp; &copy; &nbsp;<span id="year"></span> - Julius Kimuli </h6>
 
       </div>
 
+
     </footer>
 
-    </div> <!-- end container -->
-
-
+    
     <!--Import jQuery before materialize.js-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
