--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
               <h5 class="grey-text text-darken-4"> Hello,</h5>
 
               <h6 class="grey-text text-darken-4"> I'm Julius Kimuli</h6>
-              <p class="grey-text text-darken-1">Telecom Engineer and Software Developer from</p>
+              <p class="grey-text text-darken-1">Telecom Engineer and Hobbyist Web Developer from</p>
 
               <p> Kampala - Uganda</p>
 
@@ -114,7 +114,7 @@
                       <ul>
                           <li><i class="fas fa-car" style="color:#FF5722;"></i> &nbsp;&nbsp;<span class="grey-text text-darken-1">Motorsport</span></li>
                           <li><i class="fas fa-music" style="color:#FF5722;"></i> &nbsp;&nbsp;<span class="grey-text text-darken-1">Music</span></li>
-                          <!--<li><i class="fas fa-aeroplane" style="color:#FF5722;"></i>&nbsp;&nbsp;<span class="grey-text text-darken-1">Travel</span></li>-->
+                          
                       </ul>
 
                   </div>
